--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <div>
+        <div id="nav-bar">
             <ul>
-                <li>Home</li>
                 <li>Projects</li>
                 <li>Certifications</li>
-                <li>Contact Me</li>
+                <li>Contact</li>
             </ul>
         </div>
         <script src="" async defer></script>
