Added ids and classes to nav bar

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </head>
     <body>
         <div id="nav-bar">
-            <ul>
-                <li>Projects</li>
-                <li>Certifications</li>
-                <li>Contact</li>
+            <ul id="nav-ul">
+                <li class="nav-li">Projects</li>
+                <li class="nav-li">Certifications</li>
+                <li class="nav-li">Contact</li>
             </ul>
         </div>
         <script src="" async defer></script>
