Added a background img & a temporary nav bar color

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li class="nav-li">Contact</li>
             </ul>
         </div>
+        <div id="hero"></div>
         <script src="" async defer></script>
     </body>
 </html>
