--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <div id="nav-bar">
-            <ul id="nav-ul">
-                <li class="nav-li">Projects</li>
-                <li class="nav-li">Certifications</li>
-                <li class="nav-li">Contact</li>
-            </ul>
+        <div id="hero">
+            <div id="nav-bar">
+                <ul id="nav-ul">
+                    <li class="nav-li">Projects</li>
+                    <li class="nav-li">Certifications</li>
+                    <li class="nav-li">Contact</li>
+                </ul>
+            </div>
         </div>
-        <div id="hero"></div>
         <script src="" async defer></script>
     </body>
 </html>
