Created a central box

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     <li class="nav-li">Contact</li>
                 </ul>
             </div>
+            <div id="header">
+                <div id="rectangle">
+                    <div id="name">Ne<br/>da</div>
+                </div>
+            </div>
         </div>
         <script src="" async defer></script>
     </body>
