Added an h1 and aligned items

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <div id="rectangle">
                     <div id="name">Ne<br/>da</div>
                 </div>
+                <h1 id="h1">Front-end Developer</h1>
             </div>
         </div>
         <script src="" async defer></script>
