--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
                     <div id="name">Ne<br/>da</div>
                 </div>
                 <h1 id="h1">Front-end Developer</h1>
+                <div id="icons">
+                    <a>
+                        <img src="resources/linkedin.png" alt="LinkedIn Logo" class="icon">
+                    </a>
+                    <a>
+                        <img src="resources/github.png" alt="Github Logo" class="icon">
+                    </a>
+                    <a>
+                        <img src="resources/at.png" alt="Email Logo" class="icon">
+                    </a>
+                    <a>
+                        <img src="resources/cv.png" alt="CV Logo" class="icon">
+                    </a>
+                </div>
             </div>
         </div>
         <script src="" async defer></script>
