Added most of the links on icons

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 </div>
                 <h1 id="h1">Front-end Developer</h1>
                 <div id="icons">
-                    <a>
+                    <a href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/" target="_blank">
                         <img src="resources/linkedin.png" alt="LinkedIn Logo" class="icon">
                     </a>
-                    <a>
+                    <a href="https://github.com/nedakinduryte" target="_blank">
                         <img src="resources/github.png" alt="Github Logo" class="icon">
                     </a>
-                    <a>
+                    <a href="mailto: neda.kinduryte@gmail.com">
                         <img src="resources/at.png" alt="Email Logo" class="icon">
                     </a>
                     <a>
