--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     </a>
                 </div>
             </div>
+            <div id="projects">
+                
+            </div>
         </div>
         <script src="" async defer></script>
     </body>
