Added a placeholder to gif

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div id="projects">
-                
+                <img src="" alt="Diner App Gif" class="gif">
             </div>
         </div>
         <script src="" async defer></script>
