--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
             </div>
             <div id="projects">
                 <img src="" alt="Diner App Gif" class="gif">
+                <div id="buttons">
+                    <a href="https://nedakinduryte.github.io/dining-finder/" target="_blank">
+                        <button type="button" class="button">See the website</button>
+                    </a>
+                    <a href="https://github.com/nedakinduryte/dining-finder" target="_blank">
+                        <button type="button" class="button">
+                                <img src="resources/github-dark.png" alt="Github Logo" id="github-logo">
+                                Github
+                        </button>
+                    </a>
+                </div>
             </div>
         </div>
         <script src="" async defer></script>
