Added a project description

--- a/index.html
+++ b/index.html
@@ -42,18 +42,29 @@
                     </a>
                 </div>
             </div>
-            <div id="projects">
+            <div class="projects">
                 <img src="" alt="Diner App Gif" class="gif">
-                <div id="buttons">
+                <div class="buttons">
                     <a href="https://nedakinduryte.github.io/dining-finder/" target="_blank">
                         <button type="button" class="button">See the website</button>
                     </a>
                     <a href="https://github.com/nedakinduryte/dining-finder" target="_blank">
                         <button type="button" class="button">
-                                <img src="resources/github-dark.png" alt="Github Logo" id="github-logo">
+                                <img src="resources/github-dark.png" alt="Github Logo" class="github-logo">
                                 Github
                         </button>
                     </a>
+                </div>
+                <div class="description">
+                    <h2>Diner App</h2>
+                    <h3>An app made to help you choose a place to eat in your city.</h3>
+                    <p>Simply type the name of the city that you’re in,
+                        choose the type of food that you’d like to eat today
+                        and hit “Search”. You’ll be provided with three
+                        options nicely displayed on a map and all the
+                        necessary information about the restaurants on
+                        the side bar.
+                    </p>
                 </div>
             </div>
         </div>
