Added "made using" part & images

--- a/index.html
+++ b/index.html
@@ -56,15 +56,21 @@
                     </a>
                 </div>
                 <div class="description">
-                    <h2>Diner App</h2>
-                    <h3>An app made to help you choose a place to eat in your city.</h3>
-                    <p>Simply type the name of the city that you’re in,
+                    <h2 class="project-name">Diner App</h2>
+                    <h3 class="project-idea">An app made to help you choose a place to eat in your city.</h3>
+                    <p class="project-description">Simply type the name of the city that you’re in,
                         choose the type of food that you’d like to eat today
                         and hit “Search”. You’ll be provided with three
                         options nicely displayed on a map and all the
                         necessary information about the restaurants on
                         the side bar.
                     </p>
+                </div>
+                <p class="made-using">Made using:</p>
+                <div class="technology">
+                    <img src="resources/javascript.png" alt="JavaScript" class="technology-img">
+                    <img src="resources/react.png" alt="React" class="technology-img">
+                    <img src="resources/materialui.png" alt="Material-UI" class="technology-img">
                 </div>
             </div>
         </div>
