--- a/index.html
+++ b/index.html
@@ -23,54 +23,105 @@
                 </ul>
             </div>
             <div id="header">
-                <div id="rectangle">
-                    <div id="name">Ne<br/>da</div>
-                </div>
-                <h1 id="h1">Front-end Developer</h1>
-                <div id="icons">
-                    <a href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/" target="_blank">
-                        <img src="resources/linkedin.png" alt="LinkedIn Logo" class="icon">
-                    </a>
-                    <a href="https://github.com/nedakinduryte" target="_blank">
-                        <img src="resources/github.png" alt="Github Logo" class="icon">
-                    </a>
-                    <a href="mailto: neda.kinduryte@gmail.com">
-                        <img src="resources/at.png" alt="Email Logo" class="icon">
-                    </a>
-                    <a>
-                        <img src="resources/cv.png" alt="CV Logo" class="icon">
-                    </a>
+                <div id="main">
+                    <div id="rectangle">
+                        <div id="name">Ne<br />da</div>
+                    </div>
+                    <h1 id="title">Front-end Developer</h1>
+                    <div id="icons">
+                        <a
+                            href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/"
+                            target="_blank"
+                        >
+                            <img
+                                src="resources/linkedin.png"
+                                alt="LinkedIn Logo"
+                                class="icon"
+                            />
+                        </a>
+                        <a
+                            href="https://github.com/nedakinduryte"
+                            target="_blank"
+                        >
+                            <img
+                                src="resources/github.png"
+                                alt="Github Logo"
+                                class="icon"
+                            />
+                        </a>
+                        <a href="mailto: neda.kinduryte@gmail.com">
+                            <img
+                                src="resources/at.png"
+                                alt="Email Logo"
+                                class="icon"
+                            />
+                        </a>
+                        <a>
+                            <img
+                                src="resources/cv.png"
+                                alt="CV Logo"
+                                class="icon"
+                            />
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="projects">
-                <img src="" alt="Diner App Gif" class="gif">
+                <img src="" alt="Diner App Gif" class="gif" />
                 <div class="buttons">
-                    <a href="https://nedakinduryte.github.io/dining-finder/" target="_blank">
-                        <button type="button" class="button">See the website</button>
-                    </a>
-                    <a href="https://github.com/nedakinduryte/dining-finder" target="_blank">
+                    <a
+                        href="https://nedakinduryte.github.io/dining-finder/"
+                        target="_blank"
+                    >
                         <button type="button" class="button">
-                                <img src="resources/github-dark.png" alt="Github Logo" class="github-logo">
-                                Github
+                            See the website
+                        </button>
+                    </a>
+                    <a
+                        href="https://github.com/nedakinduryte/dining-finder"
+                        target="_blank"
+                    >
+                        <button type="button" class="button">
+                            <img
+                                src="resources/github-dark.png"
+                                alt="Github Logo"
+                                class="github-logo"
+                            />
+                            Github
                         </button>
                     </a>
                 </div>
                 <div class="description">
                     <h2 class="project-name">Diner App</h2>
-                    <h3 class="project-idea">An app made to help you choose a place to eat in your city.</h3>
-                    <p class="project-description">Simply type the name of the city that you’re in,
-                        choose the type of food that you’d like to eat today
-                        and hit “Search”. You’ll be provided with three
-                        options nicely displayed on a map and all the
-                        necessary information about the restaurants on
-                        the side bar.
+                    <h3 class="project-idea">
+                        An app made to help you choose a place to eat in your
+                        city.
+                    </h3>
+                    <p class="project-description">
+                        Simply type the name of the city that you’re in, choose
+                        the type of food that you’d like to eat today and hit
+                        “Search”. You’ll be provided with three options nicely
+                        displayed on a map and all the necessary information
+                        about the restaurants on the side bar.
                     </p>
                 </div>
                 <p class="made-using">Made using:</p>
                 <div class="technology">
-                    <img src="resources/javascript.png" alt="JavaScript" class="technology-img">
-                    <img src="resources/react.png" alt="React" class="technology-img">
-                    <img src="resources/materialui.png" alt="Material-UI" class="technology-img">
+                    <img
+                        src="resources/javascript.png"
+                        alt="JavaScript"
+                        class="technology-img"
+                    />
+                    <img
+                        src="resources/react.png"
+                        alt="React"
+                        class="technology-img"
+                    />
+                    <img
+                        src="resources/materialui.png"
+                        alt="Material-UI"
+                        class="technology-img"
+                    />
                 </div>
             </div>
         </div>
