--- a/index.html
+++ b/index.html
@@ -67,61 +67,69 @@
                 </div>
             </div>
             <div class="projects">
-                <img src="" alt="Diner App Gif" class="gif" />
-                <div class="buttons">
-                    <a
-                        href="https://nedakinduryte.github.io/dining-finder/"
-                        target="_blank"
-                    >
-                        <button type="button" class="button">
-                            See the website
-                        </button>
-                    </a>
-                    <a
-                        href="https://github.com/nedakinduryte/dining-finder"
-                        target="_blank"
-                    >
-                        <button type="button" class="button">
+                <div class="display">
+                    <img src="" alt="Diner App Gif" class="gif" />
+                    <div class="buttons">
+                        <a
+                            href="https://nedakinduryte.github.io/dining-finder/"
+                            target="_blank"
+                        >
+                            <button type="button" class="button">
+                                See the website
+                            </button>
+                        </a>
+                        <a
+                            href="https://github.com/nedakinduryte/dining-finder"
+                            target="_blank"
+                        >
+                            <button type="button" class="button">
+                                <img
+                                    src="resources/github-dark.png"
+                                    alt="Github Logo"
+                                    class="github-logo"
+                                />
+                                Github
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="vertical-line"></div>
+                <div class="details">
+                    <div class="description">
+                        <div class="text">
+                            <h2 class="project-name">Diner App</h2>
+                            <h3 class="project-idea">
+                                An app made to help you choose a place to eat in
+                                your city.
+                            </h3>
+                            <p class="project-description">
+                                Simply type the name of the city that you’re in,
+                                choose the type of food that you’d like to eat
+                                today and hit “Search”. You’ll be provided with
+                                three options nicely displayed on a map and all
+                                the necessary information about the restaurants
+                                on the side bar.
+                            </p>
+                        </div>
+                        <p class="made-using">Made using:</p>
+                        <div class="technology">
                             <img
-                                src="resources/github-dark.png"
-                                alt="Github Logo"
-                                class="github-logo"
+                                src="resources/javascript.png"
+                                alt="JavaScript"
+                                class="technology-img"
                             />
-                            Github
-                        </button>
-                    </a>
-                </div>
-                <div class="description">
-                    <h2 class="project-name">Diner App</h2>
-                    <h3 class="project-idea">
-                        An app made to help you choose a place to eat in your
-                        city.
-                    </h3>
-                    <p class="project-description">
-                        Simply type the name of the city that you’re in, choose
-                        the type of food that you’d like to eat today and hit
-                        “Search”. You’ll be provided with three options nicely
-                        displayed on a map and all the necessary information
-                        about the restaurants on the side bar.
-                    </p>
-                </div>
-                <p class="made-using">Made using:</p>
-                <div class="technology">
-                    <img
-                        src="resources/javascript.png"
-                        alt="JavaScript"
-                        class="technology-img"
-                    />
-                    <img
-                        src="resources/react.png"
-                        alt="React"
-                        class="technology-img"
-                    />
-                    <img
-                        src="resources/materialui.png"
-                        alt="Material-UI"
-                        class="technology-img"
-                    />
+                            <img
+                                src="resources/react.png"
+                                alt="React"
+                                class="technology-img"
+                            />
+                            <img
+                                src="resources/materialui.png"
+                                alt="Material-UI"
+                                class="technology-img"
+                            />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
