Added a new section and the first certificate

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="projects">
+            <div class="project">
                 <div class="display">
                     <img src="" alt="Diner App Gif" class="gif" />
                     <div class="buttons">
@@ -130,6 +130,22 @@
                             />
                         </div>
                     </div>
+                </div>
+            </div>
+            <div id="certifications">
+                <div class="card">
+                    <div class="top">
+                        <a href="https://tylermcginnis.com/courses/react/" target="_blank">
+                            <img src="resources/tyler/jpg" alt="Tyler McGinnis Courses" class="website-logo">
+                            <h2 class="certificate-name">React Fundamentals</h2>
+                        </a>
+                        <p class="certificate-date">2019 April</p>
+                    </div>
+                    <ul class="middle">
+                        <li>Learned HTML and CSS</li>
+                        <li>Got to know web accessibility standards</li>
+                        <li>Worked on responsive web design principles</li>
+                    </ul>
                 </div>
             </div>
         </div>
