Changed div tag to hr tag

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="vertical-line"></div>
+                <hr class="vertical-line"></hr>
                 <div class="details">
                     <div class="description">
                         <div class="text">
