Changed hr back to div and styled a card

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </a>
                     </div>
                 </div>
-                <hr class="vertical-line"></hr>
+                <div class="vertical-line"></div>
                 <div class="details">
                     <div class="description">
                         <div class="text">
@@ -133,10 +133,12 @@
                 </div>
             </div>
             <div id="certifications">
-                <div class="card">
+                <div class="card card-1">
                     <div class="top">
-                        <a href="https://tylermcginnis.com/courses/react/" target="_blank">
-                            <img src="resources/tyler/jpg" alt="Tyler McGinnis Courses" class="website-logo">
+                        <a href="https://tylermcginnis.com/courses/react/" target="_blank" class="website-link">
+                            <img src="resources/tyler.jpg" alt="Tyler McGinnis Courses" class="website-logo">
+                        </a>
+                        <a href="https://tylermcginnis.com/courses/react/" target="_blank" class="certificate-link">
                             <h2 class="certificate-name">React Fundamentals</h2>
                         </a>
                         <p class="certificate-date">2019 April</p>
@@ -146,6 +148,8 @@
                         <li>Got to know web accessibility standards</li>
                         <li>Worked on responsive web design principles</li>
                     </ul>
+                    <div class="bottom"></div>
+                    <ul class="bottom"></ul>
                 </div>
             </div>
         </div>
