Updated information in a card & adjusted styling

--- a/index.html
+++ b/index.html
@@ -135,22 +135,38 @@
             <div id="certifications">
                 <div class="card card-1">
                     <div class="top">
-                        <a href="https://tylermcginnis.com/courses/react/" target="_blank" class="website-link">
-                            <img src="resources/tyler.jpg" alt="Tyler McGinnis Courses" class="website-logo">
+                        <a
+                            href="https://tylermcginnis.com/courses/react/"
+                            target="_blank"
+                            class="website-link"
+                        >
+                            <img
+                                src="resources/tyler.jpg"
+                                alt="Tyler McGinnis Courses"
+                                class="website-logo"
+                            />
                         </a>
-                        <a href="https://tylermcginnis.com/courses/react/" target="_blank" class="certificate-link">
+                        <a
+                            href="https://tylermcginnis.com/courses/react/"
+                            target="_blank"
+                            class="certificate-link"
+                        >
                             <h2 class="certificate-name">React Fundamentals</h2>
                         </a>
                         <p class="certificate-date">2019 April</p>
                     </div>
+                    <div class="horizontal-line"></div>
                     <ul class="middle">
-                        <li>Learned HTML and CSS</li>
-                        <li>Got to know web accessibility standards</li>
-                        <li>Worked on responsive web design principles</li>
+                        <li>Learned the main concepts of React</li>
+                        <li>
+                            Got to know what the Webpack does and how to use it
+                        </li>
+                        <li>Used NPM to manage external packages</li>
+                        <li>Learned about Higher-order Components</li>
+                        <li>Built an app using JSX</li>
                     </ul>
-                    <div class="bottom"></div>
-                    <ul class="bottom"></ul>
                 </div>
+                
             </div>
         </div>
         <script src="" async defer></script>
