--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div id="certifications">
-                <div class="card card-1">
+                <div class="card">
                     <div class="top">
                         <a
                             href="https://tylermcginnis.com/courses/react/"
@@ -166,7 +166,44 @@
                         <li>Built an app using JSX</li>
                     </ul>
                 </div>
-                
+                <div class="card">
+                    <div class="top">
+                        <a
+                            href="https://www.codefirstgirls.org.uk"
+                            target="_blank"
+                            class="website-link"
+                        >
+                            <img
+                                src="resources/cfg.jpg"
+                                alt="Tyler McGinnis Courses"
+                                class="website-logo"
+                            />
+                        </a>
+                        <a
+                            href="https://www.codefirstgirls.org.uk"
+                            target="_blank"
+                            class="certificate-link"
+                        >
+                            <h2 class="certificate-name">Introduction to Web Development</h2>
+                        </a>
+                        <p class="certificate-date">2019 April</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                    <ul class="middle">
+                        <li>Got introduced to the best programming and UX practices</li>
+                        <li>Used Bootstrap and jQuery</li>
+                        <li>Collaborated with other people in creating a website</li>
+                        <li>Won a competition by creating a responsive website and fulfilling all the requirements</li>
+                    </ul>
+                    <div class="horizontal-line"></div>
+                    <ul class="bottom">
+                        <li>Projects:</li>
+                        <li><a href="https://nedakinduryte.github.io/CFG/"
+                            target="_blank"
+                            class="project-link">Public Transportation App</a></li>
+                    </ul>
+                    <ul class="bottom"></ul>
+                </div>
             </div>
         </div>
         <script src="" async defer></script>
