Added new placeholder for a gif

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="project">
                 <div class="display">
-                    <img src="" alt="Diner App Gif" class="gif" />
+                    <img src="https://via.placeholder.com/720x480" alt="Diner App Gif" class="gif" />
                     <div class="buttons">
                         <a
                             href="https://nedakinduryte.github.io/dining-finder/"
@@ -204,6 +204,44 @@
                     </ul>
                     <ul class="bottom"></ul>
                 </div>
+                <div class="card">
+                        <div class="top">
+                            <a
+                                href="https://www.codefirstgirls.org.uk"
+                                target="_blank"
+                                class="website-link"
+                            >
+                                <img
+                                    src="resources/cfg.jpg"
+                                    alt="Tyler McGinnis Courses"
+                                    class="website-logo"
+                                />
+                            </a>
+                            <a
+                                href="https://www.codefirstgirls.org.uk"
+                                target="_blank"
+                                class="certificate-link"
+                            >
+                                <h2 class="certificate-name">Introduction to Web Development</h2>
+                            </a>
+                            <p class="certificate-date">2019 April</p>
+                        </div>
+                        <div class="horizontal-line"></div>
+                        <ul class="middle">
+                            <li>Got introduced to the best programming and UX practices</li>
+                            <li>Used Bootstrap and jQuery</li>
+                            <li>Collaborated with other people in creating a website</li>
+                            <li>Won a competition by creating a responsive website and fulfilling all the requirements</li>
+                        </ul>
+                        <div class="horizontal-line"></div>
+                        <ul class="bottom">
+                            <li>Projects:</li>
+                            <li><a href="https://nedakinduryte.github.io/CFG/"
+                                target="_blank"
+                                class="project-link">Public Transportation App</a></li>
+                        </ul>
+                        <ul class="bottom"></ul>
+                    </div>
             </div>
         </div>
         <script src="" async defer></script>
