Added a third card

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
             </div>
             <div class="project">
                 <div class="display">
-                    <img src="https://via.placeholder.com/720x480" alt="Diner App Gif" class="gif" />
+                    <img
+                        src="https://via.placeholder.com/720x480"
+                        alt="Diner App Gif"
+                        class="gif"
+                    />
                     <div class="buttons">
                         <a
                             href="https://nedakinduryte.github.io/dining-finder/"
@@ -136,6 +140,82 @@
                 <div class="card">
                     <div class="top">
                         <a
+                            href="https://www.freecodecamp.org/certification/neda/front-end-libraries"
+                            target="_blank"
+                            class="website-link"
+                        >
+                            <img
+                                src="resources/fcc.jpg"
+                                alt="FreeCodeCamp Courses"
+                                class="website-logo"
+                            />
+                        </a>
+                        <a
+                            href="https://www.freecodecamp.org/certification/neda/front-end-libraries"
+                            target="_blank"
+                            class="certificate-link"
+                        >
+                            <h2 class="certificate-name">
+                                Front End Libraries
+                            </h2>
+                        </a>
+                        <p class="certificate-date">2019 May</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                    <ul class="middle">
+                        <li>Got introduced to React and Redux</li>
+                        <li>Worked with CSS preprocessors</li>
+                        <li>Did some exercises with jQuery</li>
+                    </ul>
+                    <div class="horizontal-line"></div>
+                    <ul class="bottom">
+                        <li>Projects:</li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/WWqaYR"
+                                target="_blank"
+                                class="project-link"
+                                >Random Quote Machine</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/WBeqWE"
+                                target="_blank"
+                                class="project-link"
+                                >Markdown Previewer</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/LoYQrz?editors=0110"
+                                target="_blank"
+                                class="project-link"
+                                >Drum Machine</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/arpgNV?editors=0010"
+                                target="_blank"
+                                class="project-link"
+                                >Calculator</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/gJMELw"
+                                target="_blank"
+                                class="project-link"
+                                >Pomidoro Clock</a
+                            >
+                        </li>
+                    </ul>
+                    <ul class="bottom"></ul>
+                </div>
+                <div class="card">
+                    <div class="top">
+                        <a
                             href="https://tylermcginnis.com/courses/react/"
                             target="_blank"
                             class="website-link"
@@ -175,7 +255,7 @@
                         >
                             <img
                                 src="resources/cfg.jpg"
-                                alt="Tyler McGinnis Courses"
+                                alt="Code First: Girls Program"
                                 class="website-logo"
                             />
                         </a>
@@ -184,64 +264,41 @@
                             target="_blank"
                             class="certificate-link"
                         >
-                            <h2 class="certificate-name">Introduction to Web Development</h2>
+                            <h2 class="certificate-name">
+                                Introduction to Web Development
+                            </h2>
                         </a>
                         <p class="certificate-date">2019 April</p>
                     </div>
                     <div class="horizontal-line"></div>
                     <ul class="middle">
-                        <li>Got introduced to the best programming and UX practices</li>
+                        <li>
+                            Got introduced to the best programming and UX
+                            practices
+                        </li>
                         <li>Used Bootstrap and jQuery</li>
-                        <li>Collaborated with other people in creating a website</li>
-                        <li>Won a competition by creating a responsive website and fulfilling all the requirements</li>
+                        <li>
+                            Collaborated with other people in creating a website
+                        </li>
+                        <li>
+                            Won a competition by creating a responsive website
+                            and fulfilling all the requirements
+                        </li>
                     </ul>
                     <div class="horizontal-line"></div>
                     <ul class="bottom">
                         <li>Projects:</li>
-                        <li><a href="https://nedakinduryte.github.io/CFG/"
-                            target="_blank"
-                            class="project-link">Public Transportation App</a></li>
+                        <li>
+                            <a
+                                href="https://nedakinduryte.github.io/CFG/"
+                                target="_blank"
+                                class="project-link"
+                                >Public Transportation App</a
+                            >
+                        </li>
                     </ul>
                     <ul class="bottom"></ul>
                 </div>
-                <div class="card">
-                        <div class="top">
-                            <a
-                                href="https://www.codefirstgirls.org.uk"
-                                target="_blank"
-                                class="website-link"
-                            >
-                                <img
-                                    src="resources/cfg.jpg"
-                                    alt="Tyler McGinnis Courses"
-                                    class="website-logo"
-                                />
-                            </a>
-                            <a
-                                href="https://www.codefirstgirls.org.uk"
-                                target="_blank"
-                                class="certificate-link"
-                            >
-                                <h2 class="certificate-name">Introduction to Web Development</h2>
-                            </a>
-                            <p class="certificate-date">2019 April</p>
-                        </div>
-                        <div class="horizontal-line"></div>
-                        <ul class="middle">
-                            <li>Got introduced to the best programming and UX practices</li>
-                            <li>Used Bootstrap and jQuery</li>
-                            <li>Collaborated with other people in creating a website</li>
-                            <li>Won a competition by creating a responsive website and fulfilling all the requirements</li>
-                        </ul>
-                        <div class="horizontal-line"></div>
-                        <ul class="bottom">
-                            <li>Projects:</li>
-                            <li><a href="https://nedakinduryte.github.io/CFG/"
-                                target="_blank"
-                                class="project-link">Public Transportation App</a></li>
-                        </ul>
-                        <ul class="bottom"></ul>
-                    </div>
             </div>
         </div>
         <script src="" async defer></script>
