Added a fourth card

--- a/index.html
+++ b/index.html
@@ -299,6 +299,42 @@
                     </ul>
                     <ul class="bottom"></ul>
                 </div>
+                <div class="card">
+                    <div class="top">
+                        <a
+                            href="https://www.freecodecamp.org/certification/neda/javascript-algorithms-and-data-structures"
+                            target="_blank"
+                            class="website-link"
+                        >
+                            <img
+                                src="resources/fcc.jpg"
+                                alt="Code First: Girls Program"
+                                class="website-logo"
+                            />
+                        </a>
+                        <a
+                            href="https://www.freecodecamp.org/certification/neda/javascript-algorithms-and-data-structures"
+                            target="_blank"
+                            class="certificate-link"
+                        >
+                            <h2 class="certificate-name">
+                                JavaScript Algorithms and Data Structures
+                            </h2>
+                        </a>
+                        <p class="certificate-date">2019 March</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                    <ul class="middle">
+                        <li>Learned JavaScript ES6 principles</li>
+                        <li>Matched, searched, and replaced text using Regular Expressions</li>
+                        <li>Worked with basic data structures in JavaScript</li>
+                        <li>Practiced Object Oriented and Functional programming</li>
+                        <li>Solved algorithmic problems</li>
+                    </ul>
+                    <ul class="bottom">
+                    </ul>
+                    <ul class="bottom"></ul>
+                </div>
             </div>
         </div>
         <script src="" async defer></script>
