Added the fifth card

--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@
                             >
                         </li>
                     </ul>
-                    <ul class="bottom"></ul>
                 </div>
                 <div class="card">
                     <div class="top">
@@ -297,7 +296,6 @@
                             >
                         </li>
                     </ul>
-                    <ul class="bottom"></ul>
                 </div>
                 <div class="card">
                     <div class="top">
@@ -326,14 +324,92 @@
                     <div class="horizontal-line"></div>
                     <ul class="middle">
                         <li>Learned JavaScript ES6 principles</li>
-                        <li>Matched, searched, and replaced text using Regular Expressions</li>
+                        <li>
+                            Matched, searched, and replaced text using Regular
+                            Expressions
+                        </li>
                         <li>Worked with basic data structures in JavaScript</li>
-                        <li>Practiced Object Oriented and Functional programming</li>
+                        <li>
+                            Practiced Object Oriented and Functional programming
+                        </li>
                         <li>Solved algorithmic problems</li>
                     </ul>
-                    <ul class="bottom">
+                </div>
+                <div class="card">
+                    <div class="top">
+                        <a
+                            href="https://www.freecodecamp.org/certification/neda/responsive-web-design"
+                            target="_blank"
+                            class="website-link"
+                        >
+                            <img
+                                src="resources/fcc.jpg"
+                                alt="Code First: Girls Program"
+                                class="website-logo"
+                            />
+                        </a>
+                        <a
+                            href="https://www.freecodecamp.org/certification/neda/responsive-web-design"
+                            target="_blank"
+                            class="certificate-link"
+                        >
+                            <h2 class="certificate-name">
+                                Responsive Web Design
+                            </h2>
+                        </a>
+                        <p class="certificate-date">2018 August</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                    <ul class="middle">
+                        <li>Learned HTML and CSS</li>
+                        <li>Got to know the web accessibility standards</li>
+                        <li>Practiced Visual Design of the website</li>
+                        <li>Worked on responsive website patterns</li>
                     </ul>
-                    <ul class="bottom"></ul>
+                    <div class="horizontal-line"></div>
+                    <ul class="bottom">
+                        <li>Projects:</li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/full/RBdNOx/"
+                                target="_blank"
+                                class="project-link"
+                                >Tribute Page
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/QBPOqE"
+                                target="_blank"
+                                class="project-link"
+                                >Survey Form
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/ajrjaq"
+                                target="_blank"
+                                class="project-link"
+                                >Product Landing Page
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/Zjggoy?editors=1000"
+                                target="_blank"
+                                class="project-link"
+                                >Technical Documentation Page
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://codepen.io/nedaneda/pen/gdYaBj?editors=1100"
+                                target="_blank"
+                                class="project-link"
+                                >Personal Portfolio Website
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
