Created contact me section and a contact form

--- a/index.html
+++ b/index.html
@@ -412,6 +412,46 @@
                     </ul>
                 </div>
             </div>
+            <div id="contact-form">
+                <div id="contact">
+                    <h2 id="heading">Contact me</h2>
+                    <div id="social-handles">
+                        <a
+                            href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/"
+                            target="_blank"
+                        >
+                            <img
+                                src="resources/linkedin.png"
+                                alt="LinkedIn Logo"
+                                class="icn"
+                            />
+                        </a>
+                        <a
+                            href="https://github.com/nedakinduryte"
+                            target="_blank"
+                        >
+                            <img
+                                src="resources/github.png"
+                                alt="Github Logo"
+                                class="icn"
+                            />
+                        </a>
+                        <a>
+                            <img
+                                src="resources/cv.png"
+                                alt="CV Logo"
+                                class="icn"
+                            />
+                        </a>
+                    </div>
+                    <form id="contact-details">
+                        <p class="field-name">To:</p><span className="message">neda.kinduryte@gmail.com</span>
+                        <p class="field-name">Your e-mail:</p><input type="text" name="your-email" className="message">
+                        <p class="field-name">Your name:</p><input type="text" name="your-name" className="message">
+                        <p class="field-name">Message:</p><input type="text" name="message" className="message">
+                    </form>
+                </div>
+            </div>
         </div>
         <script src="" async defer></script>
     </body>
