Styled the contact form

--- a/index.html
+++ b/index.html
@@ -448,8 +448,9 @@
                         <p class="field-name">To:</p><span className="message">neda.kinduryte@gmail.com</span>
                         <p class="field-name">Your e-mail:</p><input type="text" name="your-email" className="message">
                         <p class="field-name">Your name:</p><input type="text" name="your-name" className="message">
-                        <p class="field-name">Message:</p><input type="text" name="message" className="message">
+                        <p class="field-name">Message:</p><textarea className="message"></textarea>
                     </form>
+                    <button type="button">Send</button>
                 </div>
             </div>
         </div>
