Added a send button

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         <p class="field-name">Your name:</p><input type="text" name="your-name" className="message">
                         <p class="field-name">Message:</p><textarea className="message"></textarea>
                     </form>
-                    <button type="button">Send</button>
+                    <button type="button" id="send-button">Send</button>
                 </div>
             </div>
         </div>
