Added a vertical line and some additional styling

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
                             />
                         </a>
                     </div>
+                    <div class="separator"></div>
                     <form id="contact-details">
                         <p class="field-name">To:</p><span className="message">neda.kinduryte@gmail.com</span>
                         <p class="field-name">Your e-mail:</p><input type="text" name="your-email" className="message">
