--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="project">
                 <div class="display">
                     <img
-                        src="https://via.placeholder.com/720x480"
+                        src=""
                         alt="Diner App Gif"
                         class="gif"
                     />
